# flappy_dappy

./: Cargo.toml  README.md
src/: animation.rs  main.rs
